fix: 'adopt me' contrast to comply with WCAG 2.1 AA

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ footer {
   color: #ff1493;
   text-decoration-thickness: 2px;
   text-underline-offset: 0.5rem;
+  font-size: 1.25rem;
   font-weight: 700;
   z-index: 3;
 }
@@ -215,6 +216,8 @@ footer {
   text-decoration-color: #000;
   color: #ff1493;
   align-self: flex-end;
+  font-size: 1.25rem;
+  font-weight: 700;
 }
 .adopt .cards .card img {
   width: 100%;
