--- a/scss/pages/_adopt.scss
+++ b/scss/pages/_adopt.scss
@@ -31,6 +31,8 @@
           text-decoration-color: $brand-dark;
           color: $brand-primary;
           align-self: flex-end;
+          font-size: 1.25rem;
+          font-weight: 700;
         }
       }
 
