--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -81,6 +81,7 @@
           color: $brand-primary;
           text-decoration-thickness: 2px;
           text-underline-offset: 0.5rem;
+          font-size: 1.25rem;
           font-weight: 700;
           z-index: 3;
 
